# l5r-dices

./: .gitignore  build.sh  pyproject.toml
l5r_dices/: __main__.py  cli.py  roller.py
